--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
   "rules": {
     "camelcase": "off",
     "no-unused-vars": "off",
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "no-underscore-dangle": "off",
+    "comma-dangle": "off"
   }
 }
