--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,9 @@
     "no-unused-vars": "off",
     "import/extensions": "off",
     "no-underscore-dangle": "off",
-    "comma-dangle": "off"
+    "comma-dangle": "off",
+    "no-restricted-globals": "off",
+    "no-console": "off"
+
   }
 }
